# Krisp-SDK-Sample-Apps

./: README  README.md  README.txt  TODOs.txt  build-vs-solution-stt.bat  build-vs-solution.bat  example-set-variables.bat  example-set-variables.sh  makefile  set-vars.sh
cmake/: CMakeLists.txt  blas.cmake  krisp.cmake  krisp.third.party.cmake  krisp.third.party.linux.x64.cmake  krisp.third.party.linux.x64.stt.cmake  krisp.third.party.mac.arm.cmake  krisp.third.party.mac.x64.cmake  krisp.third.party.stt.win.x64.cmake  krisp.third.party.win.x64.cmake  krisp.third.party.windows.x64.cmake  libresample.cmake  libsndfile.cmake  mkl.cmake  mkl.linux.cmake  visualstudio.cmake
src/bench-app/: .main.cpp.swp  argument_parser.cpp  argument_parser.hpp  main.cpp  metrics.hpp  metrics_linux.cpp  metrics_mac.cpp  metrics_win.cpp  wave_reader.cpp  wave_reader.hpp  wave_writer.cpp  wave_writer.hpp
src/sample-al/: main.cpp
src/sample-asr/: main.cpp
src/sample-dll/: dll-main.cpp  dll-test.cpp
src/sample-nc/: main.cpp
src/sample-nc-with-stats/: main.cpp
src/sample-node/: addon.cpp  app.js  package.json
src/sample-python/: audio_processor.cpp  process_wav.py
src/sample-stt/: main.cpp
src/sample-vad/: main.cpp
src/utils/: argument_parser.cpp  argument_parser.hpp  sound_file.cpp  sound_file.hpp  wave_reader.cpp  wave_reader.hpp  wave_writer.cpp  wave_writer.hpp
test/: nc-sample-test-driver.sh
